--- a/pxp/Makefile
+++ b/pxp/Makefile
@@ -11,13 +11,15 @@ LIBNAME = libpxp
 SONAMEVERSION=0
 LFLAGS += -lpthread
 
+libdir ?= "/usr/lib"
+
 ifeq ($(PLATFORM), $(findstring $(PLATFORM), $(INCLUDE_LIST)))
 
 all: $(LIBNAME).so $(LIBNAME).a
 
 install: install_headers
-	@mkdir -p $(DEST_DIR)/usr/lib
-	cp -P $(LIBNAME).* $(DEST_DIR)/usr/lib
+	@mkdir -p $(DEST_DIR)$(libdir)
+	cp -P $(LIBNAME).* $(DEST_DIR)$(libdir)
 
 install_headers:
 	@mkdir -p $(DEST_DIR)/usr/include
